--- a/VocaDBRankings/VocaDBRankings.csproj
+++ b/VocaDBRankings/VocaDBRankings.csproj
@@ -37,8 +37,17 @@
       <HintPath>..\packages\HtmlAgilityPack.1.4.9\lib\Net45\HtmlAgilityPack.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,8 +56,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataContracts\ContentLanguageSelection.cs" />
+    <Compile Include="DataContracts\EntryThumbForApiContract.cs" />
+    <Compile Include="DataContracts\PVContract.cs" />
+    <Compile Include="DataContracts\PVService.cs" />
+    <Compile Include="DataContracts\PVType.cs" />
+    <Compile Include="DataContracts\Schemas.cs" />
+    <Compile Include="DataContracts\SongForApiContract.cs" />
+    <Compile Include="DataContracts\SongType.cs" />
+    <Compile Include="DataContracts\TagBaseContract.cs" />
+    <Compile Include="DataContracts\TagUsageForApiContract.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources\ResourceHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
