--- a/VocaDBRankings/VocaDBRankings.csproj
+++ b/VocaDBRankings/VocaDBRankings.csproj
@@ -84,6 +84,9 @@
     <None Include="packages.config" />
     <EmbeddedResource Include="Resources\Template.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\vocarankings.css" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
