allow specifying date as a param

--- a/VocaDBRankings/VocaDBRankings.csproj
+++ b/VocaDBRankings/VocaDBRankings.csproj
@@ -94,6 +94,9 @@
     <Content Include="Resources\content\icons\youtube.png" />
     <Content Include="Resources\content\vocarankings.css" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Utils\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
